# docs/swagger.json
@@ -125,9 +125,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Campaigns"
+                    "Campaign Admin"
                 ],
-                "summary": "Create a campaign [FOR ADMIN]",
+                "summary": "Create a campaign",
                 "parameters": [
                     {
                         "description": "Campaign Details",
@@ -142,15 +142,38 @@
                 "responses": {}
             }
         },
+        "/campaign/a/quiz/add": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Campaign Admin"
+                ],
+                "summary": "Create a quiz template [FOR ADMIN]",
+                "parameters": [
+                    {
+                        "description": "Quiz and Campaign Details",
+                        "name": "addQuizToCampaignBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/campaigns.addQuizToCampaignBody"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/campaign/a/quiz/template": {
             "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "Campaigns"
+                    "Campaign Admin"
                 ],
-                "summary": "Create a quiz template [FOR ADMIN]",
+                "summary": "Create a quiz template",
                 "parameters": [
                     {
                         "description": "Campaign Details",
@@ -190,6 +213,34 @@
                         "schema": {
                             "$ref": "#/definitions/campaigns.campaignParticipationBody"
                         }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/campaign/{id}/quiz": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Campaigns"
+                ],
+                "summary": "Get all campaigns",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Campaign ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -351,6 +402,17 @@
                 }
             }
         },
+        "campaigns.addQuizToCampaignBody": {
+            "type": "object",
+            "properties": {
+                "CampaignId": {
+                    "type": "string"
+                },
+                "QuizTemplateId": {
+                    "type": "string"
+                }
+            }
+        },
         "campaigns.campaignParticipationBody": {
             "type": "object",
             "properties": {
@@ -382,6 +444,9 @@
                 "Description": {
                     "type": "string"
                 },
+                "Id": {
+                    "type": "string"
+                },
                 "Name": {
                     "type": "string"
                 },
@@ -410,9 +475,6 @@
                     "type": "integer"
                 },
                 "YTVideoUrl": {
-                    "type": "string"
-                },
-                "_id": {
                     "type": "string"
                 }
             }
